New colulm for profile

--- a/Login/Login/UserManagement.resx
+++ b/Login/Login/UserManagement.resx
@@ -877,4 +877,7 @@
         uu9+aWSTp0CJTCtLYWiQ1yNAM+tB7O3/CoAC/wRgVAju6GY9RQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="viewProfileBtnCol.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
