--- a/Login/Login/ProfilePage.resx
+++ b/Login/Login/ProfilePage.resx
@@ -177,4 +177,32 @@
         igAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="deleteUserBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH4gcdBywzBKVfRgAABOlJREFU
+        SEu9l11Mm2UUx5/3bYnTES90MRtFGLDM0bKx2fctZbDSFmj5puUbykcYI9PEDORCdMFkeKH7vjBx6DK9
+        k5tlI4ARN5ksaIyK2678vDAGukWd0blkZn5s9f+vfc1L6WhBI8kvgfKc83+e85zznFNRUuKUgWEleL1u
+        uampRhoZGRbB4CUxNnZS9PXtlqqrvXJpqSumTRQyhfmLMR5waGxoqJb37g1IO3fa71dVNVVRlG0gDyiq
+        qmy22WwPuVwO4/HjQ6KionQ5v4aEhH2+ctnhKDTCv1lRrE9brdYJ8CX4AfwCfgZB8Al4Fev8Npu6bs+e
+        VgnRieV/eWGeMhCok3CaTDg8BObBXRCKw23wPjbQmpdnW8uNR/m+t7DH4za43Q4DjCvh5ArQC9LxN2AW
+        TIIp8ClgBO4Abd2v4HVsPK2jo17S+Y8tzJPyrhDWLhh+r3PEkI5iM3WMgt1ue7CgIH8N7vwB3O/D+Hw7
+        bPqx5mPwR8SGTON/m7u6GjXx2MKdnfUSncPgus74I3xWnp9vXyPw09hYLXu9xQZu0uNxGZlMPT0t0oED
+        fQL3ux7r90fZn8NmTX5/RbiKlgjjTmUIWLDwc53RuKooGaFQSHhiJ8siWFaIGK/JD1vmhebnZUaIG14k
+        zN07nbuSsOAV3eKLiqqk50zaDN5mt1xWGF+YMArMaoS+GT54RfR1g1ETQhKLhLmYO8KCM5GF15THlYL0
+        2a1rUy5kHzW9aw7kHlGTfBZvguJug8NRwIMcjvgjZ5HpyWK/1CENinZ5UARAuxwSIaHmQm6H9QhSxTck
+        AtLG8a2PpLyX/Rm4mTJtfjZrNDd5d5I/ukRi0t4evrpNEPwqIvwjouASj05aTGmTlk16Us9bMlOnwQVL
+        Jv7OSp0yqxD9GoTAbzj9SPp4zvpj4kmppDi2oJ6qKo8MwWMRYXJQwNEVsADml+Eq+B1QmNyF+Fupb1uy
+        p8Sw5HG6YgpqsApwar4HrH8Kz4oNM9m3dA5XymXTObOz3IGyct1bnPUL4S0QvBYRDv5bYbJgOm+uPCn2
+        6V+mRdTWlsloKiYIavd8878QDlL4lOj7X4XDoa7YVbLSUC8kmlxBoE+uO1pyvSNeWE1yXVxaThP/lFMG
+        yikDn2VGldNtrZwOiycSKqeaGi/L6WhElLwonpPapWfweGiExC39A+IfFM1y1AMymDW6Lbn7Pl9CD0hb
+        m58PSBbEODhQ9Dr+LkrkySzUPZlt2w/ZVvNkHoz4I2c4HCxpEkVFhdFNYgZNIi1nQjWUNRavpEkYurub
+        mFRN8PFTxBebRNmSJkECgXBootviGNrixnBbxCn062NRU1Mmo8uxLbKnx2+LGl1dDdwpeylHGc3oQ+4W
+        00asQcDAQaC3t1UaGOgVqNkNWP88SHwQIHT297xl7YTBdzpj9tU3uSk4ybDb83Sjj7oOn++AzQDWcNr8
+        M2JDEht9CE9RXFzEcFXA8DKIN+xdAjyhfh2HvTc47HV2NsQf9jR4chrwdHDwEvgWJDrefoBNtzGDI+HV
+        +15eWKO2tlxGthuxgS0I5T44HQNfAObADcAruArmwGsQrGPoe3vbVjfQ6+Hp6+ur5P7+HsF7RQKlQCAH
+        2AC/wjzGEZdj8YkTw6KyMv5XmHCWrQSWVEuLTxoaekrMz8+IubnTgt+pWEbYYEybxTgNfwEx1fNhsVi7
+        igAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
